# fgpt

./: .gitignore  README.md  base_train.py  data.py  data_loaders.py  fineweb.py  hellaswag.py  hellaswag_eval_20250901_1702.jsonl  hellaswag_eval_20250905_1150.jsonl  inference.py  instruct.py  model.py  model_weights_20250905_1150.pth  play.ipynb  pyproject.toml  requirements.txt  sample_outputs_20250706_1924.jsonl  sample_outputs_20250706_1925.jsonl  sample_outputs_20250901_1702.jsonl  sample_outputs_20250905_1150.jsonl  tokenizer.py  train.py  train_metrics_20250706_1925.jsonl  train_metrics_20250901_1702.jsonl  visualize.ipynb
instruction_data/: oasst1_en_instruction_response_pairs.json  simple_instruction_data.json
logs/: instruct_training_metrics.jsonl  sample_outputs_20251004_0846.jsonl  sample_outputs_20251014_2100.jsonl  sample_outputs_20251015_0528.jsonl  sample_outputs_20251015_0534.jsonl  sample_outputs_20251015_2016.jsonl  sample_outputs_20251015_2047.jsonl  sample_outputs_20251015_2058.jsonl  sample_outputs_20251016_0639.jsonl  sample_outputs_20251018_1703.jsonl  sample_outputs_20251018_1705.jsonl  sample_outputs_20251129_1850.jsonl  sample_outputs_20251220_1602.jsonl  train_metrics_20251004_0846.jsonl  train_metrics_20251014_2100.jsonl  train_metrics_20251015_0528.jsonl  train_metrics_20251015_0534.jsonl  train_metrics_20251015_2016.jsonl  train_metrics_20251015_2047.jsonl  train_metrics_20251015_2058.jsonl  train_metrics_20251016_0639.jsonl  train_metrics_20251018_1703.jsonl  training_log.jsonl  visualize.ipynb
report/code/: visualize.ipynb
(+14 files in other folders)
