[project]
name = "fgpt_base"
description = "fgpt-base model package" 
authors = [
    { name = "Felix Jost", email = "fel.jost@gmail.com" }
]
requires-python = ">=3.11"
dynamic = ["version"]

[tool.setuptools]
packages = ["fgpt_base"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"